--- a/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
@@ -12,7 +12,7 @@
       <dd class="corLightGray"><em>{{ myTask.adCheck }}</em>更新</dd>
       </a></li>
       {% endif %}
-    <li><a href="{{ asset(path('_shopping_list'),'cdn1') }}">
+    <li><a href="{{ asset(path('jili_emar_top_cps'),'cdn1') }}">
       <dt>去购物</dt>
       </a></li>
     {% if myTask.task.wen==1 %}
