--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -90,7 +90,7 @@ $(document).ready(function(){
         <!-- current query path is {{  router_current }} -->
         <li {{ router_current == '_homepage' ? 'class="second navSelectedBg"':'' }}><a href="{{ path('_homepage') }}" >首页</a></li>
         <li {{ router_current == '_game_index' ? 'class="navSelectedBg"':'' }}><a href="{{ asset(path('_game_index'),'cdn1')  }}">游戏体验</a></li>
-        <li {{ router_current == '_advertiserment_list' ? 'class="navSelectedBg"':'' }}><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">体验广告</a></li>
+        <li {{ (router_current == '_advertiserment_list' or router_current == '_advertiserment_offer99') ? 'class="navSelectedBg"':'' }}><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">体验广告</a></li>
         <li {{ router_current == 'jili_emar_top_cps' ? 'class="navSelectedBg"':'' }}><a href="{{ asset(path('jili_emar_top_cps'),'cdn1') }}">购物返利</a></li>
 		<li {{ router_current == '_marketActivity_index' ? 'class="navSelectedBg"':'' }}><a href="{{ asset(path('_marketActivity_index'),'cdn1')  }}">商家活动</a></li>
         <li {{ router_current == '_exchange_index' ? 'class="navSelectedBg"':'' }}><a href="{{ asset(path('_exchange_index'),'cdn1')  }}">兑换中心</a></li>
