--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -1,6 +1,14 @@
 {% for row in products %}
         <li>
-        <dt class="image curPt"><img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" /></dt>
+        <dt class="image curPt">
+	       {% if app.session.has('uid')  %}
+		   <a href="{{ row.p_o_url|replace( { 'APIMemberId': app.session.get('uid') } ) }}" target="_blank"  rel="nofollow" >
+		   {% else %}
+		   <a href="{{ path('_user_login') }}">
+		   {% endif %}
+	        <img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" />
+	        </a>
+        </dt>
           <dd class="clearfix">
             <div class="title">
 			   {% if app.session.has('uid')  %}
