--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -46,7 +46,7 @@ function goto(){
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
-<div class="webArticle adMore">
+<div class="webArticle adInfo adMore">
   <article>
       <div class="top">
   	<div class="actionTitle">
