--- a/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_form.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_form.html.twig
@@ -2,6 +2,6 @@
    {{ form_widget(form.keyword, { 'attr': { 'class': 'shopSearchInput', 'palceholder': '该条件下查找'}}) }}
    {{ form_rest(form) }}
     <div class="shopSearchSubmit" >
-    <input type="submit" class="shopSearchBtn"  />
+    <input type="submit" class="shopSearchBtn curPt"  />
     </div>
 </form>
