--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -10,7 +10,7 @@
 		   </div>
            <div class="detail">
             <span class="fl price">￥<strong>{{ row.cur_price }}</strong></span>
-            <span class="tr fr fontNormal"><a class="shop corGlobRed" >{{ row.web_name }}</a><br/><p class="corLightGray">返利最高：<em class="corGlobRed">{{ web_commissions[row.web_id] }}%</em></p></span>
+            <span class="tr fr fontNormal rebate"><a class="shop corGlobRed" >{{ row.web_name }}</a><br/><p class="corLightGray">返利最高：<em class="corGlobRed">{{ web_commissions[row.web_id] }}%</em></p></span>
            </div>
 		 </dd>
         </li>
