--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -3,7 +3,7 @@
       <ul class="clearfix">
     {% for row in websites %}
         <li><a href="{{ row.webUrl|replace({ 'APIMemberId': app.session.get('uid') } )  }}" title="{{ row.webName }}" target="_blank" rel="nofollow"><img width="90" height="45" src="{{ row.logoUrl }}" alt="{{ row.webName }}">
-          <p>最高返 <em>{{ row.commission }}%</em></p>
+          <p>最高返 <em class="corGlobRed">{{ row.commission }}%</em></p>
            </a>
         </li>
     {% endfor %}
