--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -103,15 +103,15 @@
 }
 #task .taskList li {
 	float: left;
-	width: 257px;
+	width: 267px;
 	height: 38px;
 	line-height: 38px;
-	padding: 0 25px;
+	padding: 0 20px;
 	color: #666;
-	border-bottom: 1px dotted #e5e5e5;
-	border-right: 1px dotted #e5e5e5;
+	border-bottom: 1px dashed #e5e5e5;
+	border-right: 1px dashed #e5e5e5;
 }
-#task .taskList li a:hover,#task .taskList li dt:hover{ color:#FF4300; text-decoration:underline;}
+#task .taskList li a:hover,#task .taskList li dt:hover{ color:#f65857; text-decoration:underline;}
 #task .taskList li.brn {
 	border-right: none;
 }
@@ -122,12 +122,13 @@
 	float: left;
 	cursor:pointer;
 	font-weight:bold;
+	font-size:14px;
 }
 #task .taskList li dd {
 	float: right;
 }
 #task .taskList li em {
-	color: #FF4300;
+	color: #f65857;
 }
 #task .taskList span.noTask{ padding: 46px 0px 0px 220px; display: inline-block;}
 .loginFrame, .userFrame {
@@ -319,7 +320,7 @@
 	float: right;
 }
 #ranking ul li dt span {
-	color: #E0542D;
+	color: #f65857;
 	margin: 0 3px;
 }
 #timeline {
@@ -454,7 +455,7 @@
 	float: left;
 	width: 134px;
 	border-right: 1px dotted #EEE;
-	color: #F74A28;
+	color: #f65857;
 	font-size: 22px;
 	line-height: 40px;
 }
@@ -524,8 +525,7 @@
 }
 #getMallList .menu a {
 	display: inline-block;
-	padding: 2px 5px;
-	color: #999999;
+	padding: 2px 0;
 	margin: 0 2px;
 	border-radius: 3px;
 }
@@ -541,7 +541,7 @@
 	text-align: center;
 	border-top: 1px dotted #e5e5e5;
 	margin-top: 10px;
-	padding:16px 0 12px;
+	padding:14px 0 4px;
 	color: #666;
 }
 #getMallList li a {
@@ -549,21 +549,21 @@
 }
 #getMallList li a p{ color:#999;}
 #getMallList li em {
-	color: #FF6B4F;
+	color: #f65857;
 }
 #indexRecommend{ position:relative;}
-#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 1px 1px 0; padding:0 0 14px; width: 203px; overflow: hidden; position:relative;}
+#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 7px 7px 0; padding:0 0 14px; width: 200px; overflow: hidden; position:relative;}
 #indexRecommend ul li.mr0 {	margin-right: 0;}
 #indexRecommend ul li p { padding: 0px 10px;}
 #indexRecommend ul li p.image {	padding: 0;	margin-bottom: 5px;}
-#indexRecommend ul li p.image a img{ width:210px; height:auto;}
-#indexRecommend ul li p.price {	color: #f74a28;}
+#indexRecommend ul li p.image a img{ width:200px; height:auto;}
+#indexRecommend ul li p.price {	color: #f65857;}
 #indexRecommend ul li p.price .price1{}
 #indexRecommend ul li p.price .price2 {	font-size: 18px; font-weight: bold; margin:0 3px;}
 #indexRecommend ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right;} 
 #indexRecommend ul li p del { text-decoration: line-through; margin-right: 5px;}
 #indexRecommend .menu{ position:absolute; right:0; top:0;}
-#indexRecommend .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px; color:#666;}
+#indexRecommend .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px;}
 #indexRecommend .menu a.more:hover{background: url("../images140307/iconImage.png") no-repeat scroll 0 -937px; color:#ff6b4f;}
 #indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 25px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:15px 21px 24px 12px;}
 #indexRecommend ul li .model strong{font-size: 16px; margin-left: 10px; vertical-align: 5px;}
@@ -596,6 +596,7 @@
 #marketActivity ul li dd {
 	float: right;
 	width: 105px;
+	height:180px;
 }
 #marketActivity ul li p {
 	margin: 5px 0;
