justify1 after release

--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -63,7 +63,9 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-{% include 'JiliApiBundle::header.html.twig' %}
+<div id="header">
+	{% include 'JiliApiBundle::header.html.twig' %}
+</div>
 <div class="webArticle cpsActivity">
   <div class="topBtn"><a href="#"><img src="{{ asset('other/topBtn.jpg') }}" width="34" height="32"></a></div>
   <div class="classify">
