--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -23,5 +23,5 @@
 		 </dd>
         </li>
 {% else %}
-<em>很抱歉，没有找到相关的商品。</em>
+<em class="noResult borderGlob"><span class="icon"></span><span class="text">很抱歉，没有找到相关的商品。<span></em>
 {% endfor %}
