--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -43,17 +43,20 @@
   </div><!-- eof main-->
 
   <div class="sidebar w300 fr">
-	<script type="text/javascript">
-	/*300*250，创建于2014-4-11*/
-	var cpro_id = "u1519416";
-	</script>
-	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
-	
-	<script type="text/javascript">
-	/*300*250，创建于2014-4-11*/
-	var cpro_id = "u1519420";
-	</script>
-	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+  	<div>
+		<script type="text/javascript">
+		/*300*250，纯文字*/
+		var cpro_id = "u1522260";
+		</script>
+		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+	</div>
+    <div class="marginT15">	
+		<script type="text/javascript">
+		/*300*250，纯图片*/
+		var cpro_id = "u1519420";
+		</script>
+		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+    </div>
   </div><!-- eof sidebar -->
 
 {% endblock %}
