--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_page.html.twig
@@ -24,8 +24,8 @@
 
             </p>
           </div>
-        </li>
+        </li> 
 {% else %}
-<em>很抱歉，没有找到相关的商家。</em>
+<em class="noResult borderGlob"><span class="icon"></span><span class="text">很抱歉，没有找到相关的商家。<span></em>
 {% endfor %}
 </ul>
