--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 {% include 'JiliApiBundle::seo.html.twig' %}
-<title>积粒网-首页 一站式积分媒体！</title>
+<title>积粒网-首页 轻松积米粒，快乐换奖励！</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
