--- a/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
@@ -1,3 +1,6 @@
+<script src="{{ asset('js/jl.ui.tab.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/task.js')}}" type="text/javascript"></script>
+
 <div class="all clearfix">
   <ul id="undoTask" class="taskList clearfix">
     {% if myTask.task.game==1 %}
