--- a/src/Jili/ApiBundle/Resources/views/seo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/seo.html.twig
@@ -1,2 +1,2 @@
 <meta content="积粒,积粒网,91积粒网,返利网,返利,返现,超级返,购物返利,商城返利,淘宝,淘宝返利,京东返利,积分,积分商城,网购返利,91jili.com" name="keywords"/>
-<meta content="积粒网，一站式积分媒体！拥有游戏体验，体验广告，购物返利，商家活动几大板块，网站的货币为米粒，在享受众多商城最优惠价格同时还可从积粒网获得不同比率的现金奖励！积粒网让你省得多，赚得也更多！" name="description"/>
+<meta content="积粒网，轻松积米粒，快乐换奖励！拥有游戏体验，体验广告，购物返利，商家活动几大板块，网站的货币为米粒，在享受众多商城最优惠价格同时还可从积粒网获得不同比率的现金奖励！积粒网让你省得多，赚得也更多！" name="description"/>
