--- a/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
@@ -39,11 +39,27 @@
       {{ render(controller('JiliEmarBundle:Product:category', { 'qs': app.request.query.all, 'rt': 'jili_emar_product_search' })) }}
     </div>
 	<div class="fl">
-	<script type="text/javascript">
-/*200*200，创建于2014-4-11*/
-var cpro_id = "u1519087";
-</script>
-<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+		<div>
+			<script type="text/javascript">
+            /*200*90，纯文字*/
+            var cpro_id = "u1522251";
+            </script>
+            <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        </div>
+		<div>
+			<script type="text/javascript">
+            /*200*90，纯文字*/
+            var cpro_id = "u1522251";
+            </script>
+            <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        </div>
+        <div class="marginT15">
+        	<script type="text/javascript">
+			/*200*200，纯图片*/
+			var cpro_id = "u1522038";
+			</script>
+			<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        </div>
 	</div>
 {#
 #}
