--- a/src/Jili/EmarBundle/Resources/views/Product/search_pagination.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search_pagination.html.twig
@@ -22,12 +22,12 @@
             <div class="detail">
 				<span class="fl price">￥<strong>{{ row.cur_price }}</strong></span>
 				<span class="tr fr fontNormal"><a class="shop corGlobRed" >{{ row.web_name }}</a><br/><p class="corLightGray">返利最高：<em class="corGlobRed">10%</em></p></span>
-			</div>
+			</div>  
 {#            <p class="rebate ">返利最高：<em>10%</em></p> #}
           </dd>
-        </li>
+        </li> 
 
 {% else %}
-<em>很抱歉，没有找到相关的商品。</em>
+<em class="noResult borderGlob"><span class="icon"></span><span class="text">很抱歉，没有找到相关的商品。<span></em>
 {% endfor %}
 
