--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -1,5 +1,5 @@
       <h3>返利商城</h3>
-      <div class="menu">{#<a href="#" class="hover">热门商城</a> | <a href="#">服装饰品</a> | <a href="#">手机数码家电</a>#}<a class="more" href="{{ path('jili_emar_websites_shoplist') }}">更多&gt;&gt;</a></div>
+      <div class="menu">{#<a href="#" class="hover">热门商城</a> | <a href="#">服装饰品</a> | <a href="#">手机数码家电</a>#}<a class="more" href="{{ path('jili_emar_websites_shoplist',{wcat:1,p:1}) }}">更多&gt;&gt;</a></div>
       <ul class="clearfix">
     {% for row in websites %}
         <li><a href="{{ row.webUrl|replace({ 'APIMemberId': app.session.get('uid') } )  }}" title="{{ row.webName }}" target="_blank" rel="nofollow"><img width="90" height="45" src="{{ row.logoUrl }}" alt="{{ row.webName }}">
