--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -1,5 +1,4 @@
-/*body{ font-family: '微软雅黑','宋体'; }*/
-body{font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font-size:12px; color:#525252; background-color:#f4f4f4;}
+body{font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font-size:12px; color:#333; background-color:#f4f4f4;}
 .page{ width:1150px; margin:auto;}
 .pageMain{ padding:15px 0;}
 .fl{float:left;}
@@ -20,23 +19,26 @@ strong, b{font-weight: bold;}
 .corLightRed{ color:#ff6b4f;}
 .corLightGray{ color:#999;}
 .corDarkGray{ color:#333;}
-.corGlobGray{ color:#525252;}
-.corGlobRed{ color:#f65857;}
+.corGlobGray{ color:#333;}
+.corGlobRed{ color:#FF3E17;}
 .corGlobBlue{ color:#65b1ee;}
+.corDarkBlue{ color:#1588e5;}
 .corWhite{ color:#fff;}
 .division{ margin:0 10px; color:#ccc;}
 .module{ border:2px solid #ff6b4f;}
 .curPt{ cursor:pointer;}
-.borderGlob{border:1px solid #e8e8e8;}
+.marginT15{ margin-top:15px;}
+.borderGlob{border:1px solid #e8e8e8;} 
+.dispalyBlock{ display:block;}
 .boxShadowGlobal{-moz-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;-webkit-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;box-shadow: 1px 1px 6px #ddd,1px -1px 6px #ddd;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ color:#666;}
 #header{ width:100%;}
-#topbar{ background-color:#F6F6F6; width:100%; /*border-bottom:1px solid #E0E0E0;*/ height:30px; line-height:30px; color:#666;}
+#topbar{ background-color:#F6F6F6; width:100%; height:30px; line-height:30px; color:#666;}
 #userbar{ float:right; position:relative;}
 #userbar li{ float:left; line-height: 28px;}	
 #userbar li.split { background: none repeat scroll 0 0 #CCC; color: #CCC; height: 12px; margin: 9px; width: 1px; overflow:hidden;}
 #userbar li a{ background:url(../images140307/iconImage.png) no-repeat; cursor:pointer;}
-#userbar li a.message{ padding-left: 20px; background-position: left 3px; color:#666;}
+#userbar li a.message{ padding-left: 20px; background-position: left 3px;}
 #userbar li a.personal{ background-position: 53px -23px; padding-right: 10px;}
 #userbar  #userFrame {background-color: #FFFFFF;border: 1px solid #e0e0e0; display: none;left: 0;position: absolute;top: 30px; width: 100%; z-index: 8000;}
 #userbar  #userFrame .userInfo { background:url("../images140307/iconImage.png") no-repeat scroll 10px -447px; border-bottom: 1px solid #EEEEEE; margin-bottom: 5px; padding: 5px 0 5px 33px;}
@@ -56,11 +58,11 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #headerContent .searchMenu .dropWrap{ background:#f7f7f7;left: 0; position: absolute; top: 34px; width: 77px; z-index: 9999; border:1px solid #e7e7e7;}
 #headerContent .searchMenu .dropWrap li{ padding-left: 15px;}
 #headerContent .searchMenu .dropWrap li:first-child{ border-bottom:1px solid #e7e7e7;}
-#headerContent .searchMenu .dropWrap li:hover{ color:#f65857; text-decoration:underline;}
+#headerContent .searchMenu .dropWrap li:hover{ color:#FF3E17; text-decoration:underline;}
 /* top search/ */
 
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
-#headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
+#headerContent .otherInlet .help{ font-size:16px; display:block; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
 #nav{width:100%; height:40px; line-height:40px; background-color:#FF6B4F;}
 #nav li{ float:left; font-size:16px; margin:0 22px; position:relative;}
 #nav li.first{ margin-right:0;}
@@ -74,21 +76,14 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #nav li.task ul li span{ right:0; margin-right:15px; position:absolute; top:0;}
 #nav li a{ color:#FFF;}
 #nav li.task a.taskBtn{ background: url("../images140307/iconImage.png") no-repeat scroll 15px -157px; padding-left: 40px;}
-#nav li.task em{background-color: #FFFFFF; -moz-border-radius: 12px; -webkit-border-radius: 12px; border-radius: 12px; color: #65B1EE; display: inline-block; font-size: 13px; font-weight:bold;line-height: 100%; margin: 0 8px; padding:2px 4px 4px;}
+#nav li.task em{background-color: #FFFFFF; -moz-border-radius: 7px; -webkit-border-radius: 7px; border-radius: 7px; color: #65B1EE; display: inline-block; font-size: 13px; font-weight:bold;line-height: 100%; margin: 0 8px; padding:2px 5px;}
 #nav li.navSelectedBg{ background:#de4528; padding:0 30px;}
-
 
 .main h1,.commodityList h1{ font-size:16px; line-height:40px;}
 .main h1 span,.commodityList h1 span{ font-size:12px; margin-left:10px;}
 
-.blackBg {
-    background-color: #000000;
-    display: none;
-    height: 100%;
-    left: 0;
-    opacity: 0.5;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 9998;
-}
+.noResult{ width:100%; background:#fff; display:block; padding:25px 0; margin-bottom:20px; text-align:center;}
+.noResult span.icon{width:65px; height:65px; background: url("../images140307/roleIcon.png") no-repeat; display:inline-block;}
+.noResult span.text{ vertical-align:28px; margin-left: 10px;}
+
+.blackBg { background-color: #000000; display: none; height: 100%; left: 0; opacity: 0.5; position: absolute; top: 0; width: 100%; z-index: 9998;}
