--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -88,7 +88,6 @@
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	height: 115px;
 }
 #task .mask .all {
 	position: absolute;
@@ -100,6 +99,7 @@
 	background-color: #FFF;
 	float: left;
 	width: 615px;
+	text-align: center;
 }
 #task .taskList li {
 	float: left;
@@ -111,7 +111,7 @@
 	border-bottom: 1px dashed #e5e5e5;
 	border-right: 1px dashed #e5e5e5;
 }
-#task .taskList li a:hover,#task .taskList li dt:hover{ color:#f65857; text-decoration:underline;}
+#task .taskList li a:hover,#task .taskList li dt:hover{ color:#FF3E17; text-decoration:underline;}
 #task .taskList li.brn {
 	border-right: none;
 }
@@ -128,14 +128,14 @@
 	float: right;
 }
 #task .taskList li em {
-	color: #f65857;
+	color: #FF3E17;
 }
-#task .taskList span.noTask{ padding: 46px 0px 0px 220px; display: inline-block;}
+#task .taskList span.noTask{ display: inline-block; line-height: 40px;}
 .loginFrame, .userFrame {
 	background-color: #FFF;
 	padding: 15px;
 }
-#vote, #ranking, #banner, #news, #timeline, #indexRecommend, #marketActivity {
+#vote, #ranking, #banner, #news, #timeline, #indexRecommend{
 	margin-top: 15px;
 }
 #indexRecommend .loading{left: 261px; top: 200px; position: absolute;z-index: 9999;}
@@ -314,13 +314,13 @@
 #ranking ul li dd {
 	float: left;
 	margin-left: 30px;
-	color:#525252;
+	color:#333;
 }
 #ranking ul li dt {
 	float: right;
 }
 #ranking ul li dt span {
-	color: #f65857;
+	color: #FF3E17;
 	margin: 0 3px;
 }
 #timeline {
@@ -351,7 +351,6 @@
 	padding: 0 10px 0 15px;
 	overflow: hidden;
 }
-#timeline ul li p{ color:#999;}
 #timeline ul li span {
 	color: #65b1ee;
 	margin-right: 3px;
@@ -455,7 +454,7 @@
 	float: left;
 	width: 134px;
 	border-right: 1px dotted #EEE;
-	color: #f65857;
+	color: #FF3E17;
 	font-size: 22px;
 	line-height: 40px;
 }
@@ -549,7 +548,7 @@
 }
 #getMallList li a p{ color:#999;}
 #getMallList li em {
-	color: #f65857;
+	color: #FF3E17;
 }
 #indexRecommend{ position:relative;}
 #indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 7px 7px 0; padding:0 0 14px; width: 200px; overflow: hidden; position:relative;}
@@ -557,15 +556,16 @@
 #indexRecommend ul li p { padding: 0px 10px;}
 #indexRecommend ul li p.image {	padding: 0;	margin-bottom: 5px;}
 #indexRecommend ul li p.image a img{ width:200px; height:auto;}
-#indexRecommend ul li p.price {	color: #f65857;}
+#indexRecommend ul li p.name{ height:20px; overflow:hidden;}
+#indexRecommend ul li p.price {	color: #FF3E17; line-height: 176%;}
 #indexRecommend ul li p.price .price1{}
-#indexRecommend ul li p.price .price2 {	font-size: 18px; font-weight: bold; margin:0 3px;}
-#indexRecommend ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right;} 
+#indexRecommend ul li p.price .price2 {	font-size: 22px; margin:0 3px;}
+#indexRecommend ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right; line-height: 19px;} 
 #indexRecommend ul li p del { text-decoration: line-through; margin-right: 5px;}
 #indexRecommend .menu{ position:absolute; right:0; top:0;}
 #indexRecommend .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px;}
 #indexRecommend .menu a.more:hover{background: url("../images140307/iconImage.png") no-repeat scroll 0 -937px; color:#ff6b4f;}
-#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 25px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:15px 21px 24px 12px;}
+#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 31px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:27px 21px 24px 12px;}
 #indexRecommend ul li .model strong{font-size: 16px; margin-left: 10px; vertical-align: 5px;}
 #marketActivity ul {
 	padding: 10px;
@@ -601,7 +601,7 @@
 #marketActivity ul li p {
 	margin: 5px 0;
 }
-#marketActivity ul li p.btn{ position:absolute; bottom:30px;}
+#marketActivity ul li p.btn{ position:absolute; bottom:20px;}
 #marketActivity ul li p.title {
 	height:70px;
 	overflow:hidden;
@@ -620,7 +620,7 @@
 	background-color: #FF6B4F;
 	font-size: 14px;
 	display: inline-block;
-	padding: 2px 15px;
+	padding: 6px 26px;
 }
 #marketActivity ul li p.btn a:hover{background-color: #e62600;}
 #marketActivity .prevBtn, #marketActivity .nextBtn {
