--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_search.html.twig
@@ -17,7 +17,10 @@
           <dd>
            <p class="price">¥{{ row.ghs_price }}</p> 
            <p class="shop">{{ row.web_name }}</p>
-           <p class="rebate">返利最高：<em>{{ row.discount }}%</em></p>
+        {% if 0 < row.discount  %}
+           <p class="rebate">返利最高：<em>{{ row.discount * emar_cps_default_rebate / 100 |round(2)  }}%</em></p>
+        {% endif %}
+
           </dd>
         </li>
     {% endfor %}
