--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
@@ -14,7 +14,9 @@
                     <a href="#"  onclick="javascript: return false;"><img width="75" height="37" src="{{ row.logoUrl }}"></a>
                 {% endif %}
               </p>
-              <p class="rebate">最高返<em>{{  row.commission }}%</em></p>
+              {% if row.commission > 0 %}
+                  <p class="rebate">最高返<em>{{  row.commission }}%</em></p>
+              {% endif %}
     
             </li>
             {% endfor %}
