--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList_page.html.twig
@@ -11,14 +11,18 @@
           <dd class="clearfix">
           <p class="title">
         <a class="shop"  href="{{ href_ }}" target="_blank" rel="nofollow" >{{ row.name }}</a></p>
+          {% if row.commission > 0 %}
             <p class="rebate">返利最高：<em>{{ row.commission }}%</em></p>
+          {% endif %}
           </dd>
           <div class="hover" style="display: none;">
             <div class="tr">
               <div class="img"><a href="{{ href_ }}" target="_blank" rel="nofollow" ><img src="{{ row.logo }}" width="60" height="30" /></a></div>
+          {% if row.commission > 0 %}
               <div class="text">最高返<br>
                 <em>{{ row.commission }}%</em></div>
             </div>
+          {% endif %}
 
             <p>
                 <a href="{{  path('jili_emar_websites_detail', {'wid': wid }) }}" class="btnDetail">返现详情</a> 
