--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -51,7 +51,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 
 /* top search */
 #headerContent #search {border: 4px solid #ff6b4f; border-radius: 3px;float: left;height: 36px;margin-left:180px; background-color:#FFF;}
-#headerContent .searchMenu{background: url("../images140307/iconImage.png") no-repeat scroll 53px -94px #f7f7f7;float: left; width: 63px; height: 26px;line-height: 26px;padding: 5px 0 5px 16px; position: relative;  border-right:1px solid #f1f1f1;}
+#headerContent .searchMenu{background: url("../images140307/iconImage.png") no-repeat scroll 53px -94px #f7f7f7; font-size: 14px; float: left; width: 63px; height: 26px;line-height: 26px;padding: 5px 0 5px 16px; position: relative;  border-right:1px solid #f1f1f1;}
 #headerContent .form{float:left;}
 #headerContent #search .text {background-color: #FFFFFF;background-position: 0 -360px;background-repeat: repeat-x;color: #666;font-size: 14px;line-height: 30px;padding: 5px;border: none;width: 460px; float:left; height:26px;}
 #headerContent #search .button {background: none repeat scroll 0 0 #FF6B4F;  letter-spacing: 5px; padding-left:8px; border: medium none;color: #FFFFFF;font-size: 16px;font-weight: 700;height: 36px; width: 68px;margin:0;float:left;}
