--- a/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
@@ -38,7 +38,7 @@
          <span class="price fl">¥{{ row.ghs_price }}<em class="fontNormal corLightGray">¥{{ row.ori_price }}</em></span>
          <span class="fl fontNormal corLightGray">总销量：<em class="corLightRed">{{ row.bought }}件</em></span>
          <div class="buyBtn" style="display: none;">
-       	    <a href="#">立即抢购</a>
+       	    <a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank">立即抢购</a>
          </div>
         </dd>
       </li>
