design regFromWenwen form

--- a/src/Jili/ApiBundle/Resources/views/User/setPassWen.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/setPassWen.html.twig
@@ -29,28 +29,30 @@ $(document).ready(function(){
 	});	
 });
 </script>
+
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
-<div class="webArticle regStep">
+<div class="webArticle regStep regFrom91ww postionR">
   <article>
   	<div class="step"><img src="{{ asset('images/step3.jpg')}}" width="960" height="86"></div>
     <div class="regForm">
-    <div class="message"><img src="{{ asset('images/succeed.jpg')}}" width="39" height="44">邮箱验证成功！你的邮箱是：<span>{{ user.email }}</span></div>
-    <div class="remind">HI,欢迎来到积粒网。请完善一下信息创建您的积粒账号</div>
+    <div class="message"><img src="{{ asset('images/succeed.jpg')}}" width="39" height="44">邮箱验证成功！您的邮箱是：<span>{{ user.email }}</span></div>
+    <div class="remind"><strong>HI,91问问<img class="marginLR5" src="/images/91wwLogoS.png">邀请您加入积粒网。请完善以下信息创建您的积粒账号</strong></div>
     <form action="{{ path('_user_setPassFromWenwen',{'code':pwdcode.code,'id':user.id }) }}" method="post" name="form1" id="form1" >
+     {% if error_message %}
+     <span class="errorWrap">
+         <font color="red">{{ error_message}}</font>
+     </span>
+     {% endif %}
     <ul class="form activate">
-	    <span>
-	   	 {% if error_message %}
-	       	 <font color="red">{{ error_message}}</font>
-	   	 {% endif %}
-	   	</span>
+	    
     	<li><dd>昵称：</dd><dt><input id="nick" name="nick" type="text" class="text" value="{{ nick }}"><br />
     	<span id="pwdError">2-20个字符</span></dt></li>
     	<li><dd>密码：</dd><dt><input id="pwd" name="pwd" type="password" class="password"><br />
-    	<span id="pwdError">电子邮件就是您今后登录积粒网的账号	</span></dt></li>
+    	<span id="pwdError">6-16个字符</span></dt></li>
         <li><dd>确认密码：</dd><dt><input id="que_pwd" name="que_pwd" type="password" class="password"><br />
-        <span id="newError">6-20个字符</span></dt></li>
+        <span id="newError">6-16个字符</span></dt></li>
         <li><dd></dd><dt><input name="ck" type="checkbox" value="1" id="ck" checked="checked">我已认真阅读并同意接受<a href="{{ path('_user_agreement') }}" target="_blank" class="provision">《积粒网会员协议》</a></dt></li>
         <li><dd></dd><dt><input type='button' name='but' id='but' value='创建账号' class='regBtn'/></dt></li>
     </ul>
