fixed commission error

--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
@@ -26,12 +26,21 @@ $(document).ready(function(){
 							msg += "<li>";
                         }
 						if ( data2.href == "{{ path('_user_login')  }}" ){
-						  msg += '<p class="image"><a href="'+data2.href+'" ><img src="'+data2.pic+'" height="130" width="200"></a></p><p class="name">'+data2.name+'</p><p class="price"><span class="price1">¥</span><span class="price2">'+data2.pri1+'</span><del class="corLightGray">￥'+data2.pri0+'</del></p>'+'<p class="corGlobGray">销量'+data2.buy+'件</p>';
-							  msg += '<div class="model hoverView curPt">';
-							  msg += '<a href="'+ data2.href+'" ><span><img src="{{ asset('images140307/iconGlass.png') }}" width="23" height="23"></span><strong class="corWhite">去看看</strong></a>';
+                        msg += '<p class="image"><a href="'+data2.href+'" ><img src="'+data2.pic+'" height="130" width="200"></a></p><p class="name">'+data2.name+'</p><p class="price"><span class="price1">¥</span><span class="price2">'+data2.pri1+'</span><del class="corLightGray">￥'+data2.pri0+'</del>';
+                        if( data2.dis > 0 ) {
+                          msg += '<span class="discount corLightGray">返利最高<br/><strong class="corGlobRed">'+data2.dis+'%</strong></span>';
+                        }
+                        msg += '</p>'+'<p class="corGlobGray">销量'+data2.buy+'件</p>';
+						msg += '<div class="model hoverView curPt">';
+					    msg += '<a href="'+ data2.href+'" ><span><img src="{{ asset('images140307/iconGlass.png') }}" width="23" height="23"></span><strong class="corWhite">去看看</strong></a>';
  				
 						} else {
-						      msg += '<p class="image"><a href="'+data2.href+'" target="_blank" rel="nofollow"><img src="'+data2.pic+'" height="130" width="200"></a></p><p class="name">'+data2.name+'</p><p class="price"><span class="price1">¥</span><span class="price2">'+data2.pri1+'</span><del class="corLightGray">￥'+data2.pri0+'</del></p><p class="corGlobGray">销量'+data2.buy+'件</p>';
+                            msg += '<p class="image"><a href="'+data2.href+'" target="_blank" rel="nofollow"><img src="'+data2.pic+'" height="130" width="200"></a></p><p class="name">'+data2.name+'</p><p class="price"><span class="price1">¥</span><span class="price2">'+data2.pri1+'</span><del class="corLightGray">￥'+data2.pri0+'</del>';
+                        if( data2.dis > 0 ) {
+                          msg += '<span class="discount corLightGray">返利最高<br/><strong class="corGlobRed">'+data2.dis+'%</strong></span>';
+                        }
+
+                            msg +='</p><p class="corGlobGray">销量'+data2.buy+'件</p>';
 							  msg += '<div class="model hoverView curPt">';
 							  msg += '<a href="'+ data2.href+'" target="_blank" rel="nofollow"><span><img src="{{ asset('images140307/iconGlass.png') }}" width="23" height="23"></span><strong class="corWhite">去看看</strong></a>'; 
  						}					
@@ -80,7 +89,7 @@ $(document).ready(function(){
 			 <p class="name">{{ row.p_name }}</p>
              <p class="price"><span class="price1">¥</span><span class="price2">{{ row.ghs_price }}</span><del class="corLightGray">原价￥{{ row.ori_price }}</del>
 
-        {% if 0 < row.discount  %}
+        {% if  row.discount > 0 %}
            <span class="discount corLightGray">返利最高<br/><strong class="corGlobRed">{{ row.discount * emar_cps_default_rebate / 100 |round(2)  }}%</strong></span>
         {% endif %}
              </p> 
