--- a/src/Jili/EmarBundle/Resources/views/Product/search_pagination.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search_pagination.html.twig
@@ -22,13 +22,12 @@
             <div class="detail">
 				<span class="fl price">￥<strong>{{ row.cur_price }}</strong></span>
                 <span class="tr fr fontNormal"><a class="shop corGlobRed" >{{ row.web_name }}</a><br/>
-                  {% if web_commissions[row.web_id] > 0 %}
+                  {% if web_commissions[row.web_id] is defined and  web_commissions[row.web_id] > 0 %}
                     <p class="corLightGray">返利最高：<em class="corGlobRed">{{ web_commissions[row.web_id] }}%</em></p>
                   {% endif %}
                 </span>
 
 			</div>
-{#            <p class="rebate ">返利最高：<em>10%</em></p> #}
           </dd>
         </li> 
 
