--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -36,7 +36,12 @@
         {% endif %}
         <div class="shop-info-l">
           <div class="shop_img"> <a href="{{ href_ }}" target="_blank" rel="nofollow"><img src="{{ website.logo_url }}" width="120" height="60" /></a>
-            <p class="shop-rebate corLightGray">最高返利<em>4.2%</em></p>
+
+{% if web_commission is defined and web_commission > 0 %}
+            <p class="shop-rebate corLightGray">最高返利<em>{{ web_commission }}%</em></p>
+{% endif %}
+
+
           </div>
           <a href="{{ href_ }}" class="goBtn" target="_blank" rel="nofollow" >去购物,赚米粒</a> 
         </div>
